--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.37.0",
+    "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "next": "16.0.3",
@@ -17,6 +19,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@supabase/supabase-js": "^2.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -24,6 +27,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "puppeteer": "^24.30.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
